<resources>
    <string name="app_name">泓济商城</string>
    <string name="login">登录</string>
    <string name="login_hint_pwd">密码</string>
    <string name="regist">注册</string>
    <string name="regist_yaoqingma">邀请码:</string>
    <string name="please_input_yaoqingma">请输入邀请码</string>
    <string name="regist_phone">手机号:</string>
    <string name="regist_phone_hint">请输入您的手机号作为登录名</string>
    <string name="regist_next_step">下一步</string>
    <string name="fast_regist_phone">手机快速注册</string>
    <string name="please_input_ver_num">请输入验证码</string>
    <string name="get_ver_num">验证码</string>
    <string name="please_set_pwd_hint">请设置登录密码</string>
    <string name="set_pwd_hint">请输入6～20位字符</string>
    <string name="show_pwd_hint">密码可见</string>
    <string name="set_pwd_create_hint">密码由6-20位字母、数字或符号组成，不能是10位一下 纯数字、字母，字母区分大小写。</string>
    <string name="set_pwd_btn_complete">完成</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="reset_account">账号:</string>
    <string name="reset_phonenum">请输入手机号</string>
    <string name="reset_ver_num">验证码:</string>
    <string name="reset_ver_hint">请输入验证码</string>
    <string name="reset_get_ver">获取验证码</string>
    <string name="reset_newpwd_hint">请设置登录密码</string>
    <string name="reset_confirm_new_pwd">确定登录密码</string>
    <string name="reset_set_pwd_hint">设置新密码:</string>
    <string name="reset_confirm_pwd_hint">确认新密码:</string>
    <string name="reset_confirm">确定</string>
    <string name="home_price_hint">元/盾</string>
    <string name="home_single_p_hint">盾单价:</string>
    <string name="home_treasure_hint">盾</string>
    <string name="home_top_money_hint">封顶额:</string>
    <string name="home_pay_hint">0</string>
    <string name="home_support_hint">我要推荐</string>
    <string name="home_team_hint">我的团队</string>
    <string name="home_money_hint">区块资产</string>
    <string name="home_mall_hint">实体店</string>
    <string name="shopping_mall_title">商城</string>
    <string name="mine_ver_name_hint">未认证</string>
    <string name="mine_daifukuan_hint">待付款</string>
    <string name="mine_daishouhuo_hint">待收货</string>
    <string name="mine_pingjia_hint">待评价</string>
    <string name="mine_tuihuan_hint">退换/售后</string>
    <string name="mine_order_hint">我的订单</string>
    <string name="mine_points_hint">积分流水</string>
    <string name="mine_dun_hint">盾</string>
    <string name="mine_voucher_hint">商标股流水</string>
    <string name="mine_invite_hint">邀请好友</string>
    <string name="mine_support_tel_hint">客户服务:400-112-0258</string>
    <string name="confirm_account_hint">请输入手机号</string>
    <string name="confirm_bank_num_hint">银行卡:</string>
    <string name="confirm_input_bank_num_hint">请输入您的银行卡号</string>
    <string name="home_unlogined">未登录</string>
    <string name="points_bank_num_hint">捐赠银行卡:</string>
    <string name="points_convert_hint">捐赠积分额:</string>
    <string name="points_actual_money_hint">可捐积分额:</string>
    <string name="points_all_cash">全部捐赠</string>
    <string name="points_cash_now">立即捐赠</string>
    <string name="points_get_money_hint">预计72小时内到账</string>
    <string name="tickets_title">商标股</string>
    <string name="tickets_num">数量:</string>
    <string name="ticket_target_hint">转出:</string>
    <string name="tickets_pwd_hint">交易密码:</string>
    <string name="shield_title">卖盾交易</string>
    <string name="shield_sell_plan_hint">计划卖出:</string>
    <string name="shield_select_bank_hint">请选择收款银行卡信息</string>
    <string name="payment_title">充值中心</string>
    <string name="payment_num_hint">充值金额:</string>
    <string name="payment_all_hint">共计金额:</string>
    <string name="payment_select_account_hint">请选择商家账户</string>
    <string name="payment_generate_num_hint">点击生成汇款码</string>
    <string name="payment_upload_hint">上传汇款凭证</string>
    <string name="payment_upload_order_hint">提交订单</string>
    <string name="payment_extra_header_hint">注:</string>
    <string name="payment_tip_2">1.请将汇款码复制到银行汇款附言。\n2.订单提交按时间先后审理，24小时审核通过。\n3.详询4001120258</string>
    <string name="recommend_title">我要推荐</string>
    <string name="recommend_wechat_hint">微信</string>
    <string name="recommend_qq_hint">QQ</string>
    <string name="recommend_weibo_hint">微博</string>
    <string name="recommend_moments_hint">朋友圈</string>
    <string name="recommend_msg_hint">1.扫码打开网页。\n2.注册完毕自动跳转APP下载。</string>
    <string name="offline_mall_title">实体商圈</string>
    <string name="upload_title_hint">上传汇款凭证</string>
    <string name="upload_submit_hint">上传图片</string>
    <string name="upload_msg_hint">点击上传图片</string>
    <string name="go_back_payment_hint">返回充值中心</string>
    <string name="go_back_home_hint">返回首页</string>
    <string name="continue_pay_hint">继续交易</string>
    <string name="person_info_title_hint">个人信息</string>
    <string name="person_header_hint">头像</string>
    <string name="person_username_hint">用户名</string>
    <string name="person_nick_hint">姓名</string>
    <string name="person_sax_hint">性别</string>
    <string name="person_brithday_hint">出生日期</string>
    <string name="account_setting_title">账户设置</string>
    <string name="setting_infos_hint">信息一览</string>
    <string name="setting_auth_name_hint">实名认证</string>
    <string name="setting_places_hint">地址管理</string>
    <string name="setting_bank_hint">银行卡管理</string>
    <string name="setting_safe_account_hint">账户安全</string>
    <string name="setting_set_hint">设置</string>
    <string name="setting_exit_hint">退出登录</string>
    <string name="infos_title">信息一览</string>
    <string name="infos_name_hint">姓名</string>
    <string name="infos_person_num_hint">身份证号</string>
    <string name="infos_phone_hint">手机号</string>
    <string name="infos_create_bank_hint">开户行</string>
    <string name="infos_card_num_hint">卡号</string>
    <string name="infos_v_account_hint">所属微股东账号</string>
    <string name="infos_v_name_hint">所属微股东姓名</string>
    <string name="infos_wechat_hint">微信地址</string>
    <string name="infos_reveiver_address_hint">收货地址</string>
    <string name="auth_name_title">实名认证</string>
    <string name="auto_points_hint">信用积分</string>
    <string name="manage_address_title">地址管理</string>
    <string name="manage_address_add_address_hint">添加新地址</string>
    <string name="address_cb_default">设为默认</string>
    <string name="address_delete_hint">删除</string>
    <string name="address_edit_hint">编辑</string>
    <string name="add_new_address_hint">添加新地址</string>
    <string name="add_address_reveiver_hint">收货人</string>
    <string name="add_address_phone_hint">联系电话</string>
    <string name="add_address_detail_hint">请填写详细信息</string>
    <string name="add_address_set_default_hint">设为默认</string>
    <string name="manage_bank_title">银行卡管理</string>
    <string name="add_bank_hint">添加银行卡</string>
    <string name="add_bank_card_title">添加银行卡</string>
    <string name="add_bank_card_name_hint">开户行:</string>
    <string name="add_bank_card_phone_hint">绑定手机号:</string>
    <string name="add_bank_card_num_hint">银行卡号:</string>
    <string name="safe_reset_login_pwd_hint">修改登录密码</string>
    <string name="safe_reset_trade_pwd_hint">修改交易密码</string>
    <string name="account_safe_title">账户安全</string>
    <string name="reset_login_title">修改登录密码</string>
    <string name="reset_login_new_pwd_hint">新密码:</string>
    <string name="reset_login_confirm_hint">确认密码:</string>
    <string name="reset_login_confirm_submit">确认修改</string>
    <string name="reset_trade_pwd_title">修改交易密码</string>
    <string name="reset_trade_pwd_hint">交易密码:</string>
    <string name="setting_title">设置</string>
    <string name="setting_feedback_hint">功能反馈</string>
    <string name="setting_about_hint">关于</string>
    <string name="about_company_name_hint">泓济智能科技</string>
    <string name="about_version">版本号：version 1.1</string>
    <string name="about_check_version_hint">版本检测更新</string>
    <string name="about_company_banquan">泓济智能科技有限公司版权所有</string>
    <string name="about_time_hint">Copyright@2014-2017</string>
    <string name="feed_back_title">功能反馈</string>
    <string name="feedback_question_hint">问题描述</string>
    <string name="feedback_phone_hint">手机号:</string>
    <string name="points_details_title">积分收支账本</string>
    <string name="explain">帮助说明</string>
    <string name="shield_details_title">盾收支账本</string>
    <string name="voucher_details_title">商标股收支账本</string>
    <string name="points_out_hint">支出</string>
    <string name="points_income_hint">收入</string>
    <string name="order_item_confirm">确认收货</string>
    <string name="change_nick_title">修改姓名</string>
    <string name="change_nick_msg_hint">4-20个字符，可由中文英文、数字、“-组成”</string>
    <string name="input_invit_person_account_hint">请输入邀请人微股东账号</string>
    <string name="help_title_hint">帮助说明</string>
    <string name="helper_tel">tel:4001120258</string>
    <string name="voucher_num_hint">请输入转出数量</string>
    <string name="voucher_target_hint">请输入对方微股东账号</string>
    <string name="voucher_pwd_hint">请输入您的交易密码</string>
    <string name="auth_name_hint">请输入您的身份证号</string>
    <string name="auth_name_submit_hint">立即认证</string>
    <string name="auth_true_name_hint">请输入您的姓名</string>
    <string name="add_address_tel_hint">请输入您的联系电话</string>
    <string name="add_address_receiver_name_hint">请输入收货人的姓名</string>
    <string name="dig_cash_title_hint">数字货币</string>
    <string name="dig_cash_money_type_hint">资产</string>
    <string name="dig_cash_num_hint">数量</string>
    <string name="dig_cash_price_hint">单位</string>
    <string name="dig_cash_all_money_hint">总资产</string>
    <string name="dig_cash_unit_hint">GSC</string>
    <string name="dig_cash_bonus_hint">分红完成</string>
    <string name="dig_cash_hint">提币</string>
    <string name="shield_histroy_title">卖盾记录</string>
    <string name="cash_histroy_title">提现记录</string>
    <string name="pay_histroy_title">充值记录</string>
    <string name="extr_histroy_title">提币流水</string>
    <string name="feedback_upload_hint">提交</string>
    <string name="dig_money_address_hint">地址:</string>
    <string name="dig_money_num_hint">请输入提币数量</string>
    <string name="dig_money_taeget_hint">请输入提币地址</string>
    <string name="dig_money_now_hint">立即提币</string>
    <string name="auth_name_username_hint">请输入您的姓名</string>
    <string name="person_card_id_hint">身份证</string>
    <string name="change_id_card_title_hint">身份证修改</string>
    <string name="paymeng_other_account_hint">请输入他人的账号</string>
    <string name="topup_title">充值中心</string>
    <string name="topup_zhu">1.汇款务必填清汇款码\n2.订单提交按先后顺序审理，48小时通过\n3.详询400-1122-258</string>

    <style name="transation_duixian">兑现</style>

    <style name="transation_chongzhi">充值</style>

    <style name="transation_gouwu">购物</style>

    <string-array name="hoem_list">
        <item>商标股\t\t50</item>
        <item>我要充值</item>
        <item>我的团队</item>
        <item>数字货币</item>
        <item>实体店</item>
        <item>我要推荐</item>
    </string-array>
    
        <string name="conver">兑换规则\n\t1.Gsc:输入积分*0.75/币价格=币数量\n\t2.商标股：输入积分*0.015=商标股数量</string>
</resources>
