<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.xxc.shoppingmall.widget.CommonTitle
        android:id="@+id/title"
        app:Titile_Txt="@string/regist"
        app:Title_Color="@color/black_000"
        app:Left_Res="@drawable/icon_fanhui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/normal_20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_yaoqingma"
            android:layout_marginLeft="@dimen/normal_h_16dp"
            android:textSize="@dimen/normal_txt_16sp"/>

        <EditText
            android:id="@+id/regist_yaoqingma"
            android:layout_width="match_parent"
            android:hint="@string/please_input_yaoqingma"
            android:theme="@style/edittext_gray_black_normal"
            android:layout_marginLeft="@dimen/normal_4dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/normal_h_16dp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/normal_h_16dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_phone"
            android:layout_marginLeft="@dimen/normal_h_16dp"
            android:textSize="@dimen/normal_txt_16sp"/>

        <EditText
            android:id="@+id/regist_phone"
            android:layout_width="match_parent"
            android:hint="@string/regist_phone_hint"
            android:layout_marginLeft="@dimen/normal_4dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginRight="@dimen/normal_h_16dp"
            android:theme="@style/edittext_gray_black_normal"
            />

    </LinearLayout>


    <Button
        android:id="@+id/regist_next"
        android:background="@drawable/login_btn_bg"
        android:layout_gravity="center_horizontal"
        android:text="@string/regist_next_step"
        android:textColor="@color/white_fff"
        android:layout_width="320dp"
        android:layout_marginTop="@dimen/normal_40dp"
        android:layout_height="@dimen/normal_40dp" />

</LinearLayout>