<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xxc.shoppingmall.widget.CommonTitle
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        app:Left_Res="@drawable/icon_fanhui"
        app:Titile_Txt="关于"
        app:Title_Color="@color/black_000" />

    <TextView
        android:id="@+id/about_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_50dp"
        android:text="@string/about_company_name_hint"
        android:textColor="@color/black_000"
        android:textSize="@dimen/normal_txt_18sp" />

    <ImageView
        android:id="@+id/about_company_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@id/about_company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_24dp"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_company_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_30dp"
        android:text="@string/about_version"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/normal_txt_16sp" />

    <TextView
        android:id="@+id/about_check_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_40dp"
        android:gravity="center"
        android:layout_below="@id/about_version"
        android:layout_marginLeft="@dimen/normal_h_16dp"
        android:layout_marginRight="@dimen/normal_h_16dp"
        android:layout_marginTop="@dimen/normal_64dp"
        android:background="@drawable/payment_btn_bg"
        android:text="@string/about_check_version_hint"
        android:textColor="@color/color_ff4040"
        android:textSize="@dimen/normal_txt_18sp" />


    <TextView
        android:id="@+id/about_date_during"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_hongji_banquan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/normal_6dp"
        android:text="@string/about_time_hint"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/normal_txt_14sp" />

    <TextView
        android:id="@+id/about_hongji_banquan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/normal_12dp"
        android:text="@string/about_company_banquan"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/normal_txt_14sp" />

</RelativeLayout>